--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.8",
     "bootstrap": "^5.1.3",
+    "fs": "^0.0.1-security",
+    "isomorphic-fetch": "^3.0.0",
     "next": "12.1.6",
+    "opensea-js": "^3.0.4",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
